--- a/index.html
+++ b/index.html
@@ -25,19 +25,17 @@
 	<div id="wrapper">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-                    <div class="row">
-                        <div class="col-md-5 logo"></div>
-                        <div class="col-md-5 "><h1 class="hamppy">HAMPPYS</h1></div>
+                        <div class="col-md-4 logo"></div>
+                        <div class="col-md-8 title"></div>
+
+                        <!--<div class="col-md-5 text-hidden"><h1 class="hamppy">HAMPPYS</h1></div>-->
                     </div>
 					<h2 class="subtitle">An assortment of items with special meanings</h2>
 					<div id="countdown"></div>
 				    <div class="social">
                          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                         
-                    </div>
-				</div>				
+                         			
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
