--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free coming soon template with jQuery countdown">
     <meta name="author" content="http://bootstraptaste.com">
-
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Hammpys</title>
 
     <!-- Bootstrap -->
