--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<h2 class="subtitle">An assortment of items with special meanings</h2>
 					<div id="countdown"></div>
 				    <div class="social">
-                         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                         <a href="www.facebook.com/hamppys"><i class="fa fa-facebook" target="_blank" aria-hidden="true"></i></a>
                          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                          			
 			</div>
