--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free coming soon template with jQuery countdown">
+    <meta name="description" content="spreading happiness in hampers">
     <meta name="author" content="http://bootstraptaste.com">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Hammpys</title>
@@ -25,22 +25,19 @@
 	<div id="wrapper">
 		<div class="container">
 			<div class="row">
-                        <div class="col-md-4 logo"></div>
-                        <div class="col-md-8 title"></div>
-
-                        <!--<div class="col-md-5 text-hidden"><h1 class="hamppy">HAMPPYS</h1></div>-->
-                    </div>
-					<h2 class="subtitle">An assortment of items with special meanings</h2>
-					<div id="countdown"></div>
-				    <div class="social">
-                         <a href="www.facebook.com/hamppys"><i class="fa fa-facebook" target="_blank" aria-hidden="true"></i></a>
-                         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                         			
+                 <div class="col-md-4 logo"></div>
+                 <div class="col-md-8 title"></div>
+           </div>
+			<h2 class="subtitle">An assortment of items with special meanings</h2>
+			<div id="countdown"></div>
+			<div class="social">
+                   <a href="www.facebook.com/hamppys"><i class="fa fa-facebook" target="_blank" aria-hidden="true"></i></a>
+                   <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>	
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-						<p class="copyright">&copy; Hamppys</p>
-                        
+                    <p class="copyright">Contact us at <i>info.hamppys@gmail.com</i><p>  
+					<p class="copyright" style="margin-top: 15px">&copy; Hamppys 2017. An initiatve by veetaday</p>                     
 				</div>
 			</div>		
 		</div>
