--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Happiness ha sign">
+    <meta name="description" content="Happiness Ka sign">
     <meta name="author" content="http://bootstraptaste.com">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Hammpys</title>
